@@ -1,13 +1,15 @@
 Revision history for LWP-Protocol-AnyEvent-http
 
 1.14.0  ~~~~-~~-~~
+        - Support for socks 5/4a/4 proxies.
+        - Honour SSL settings when requesting an HTTP URL via a HTTPS proxy.
         - ~~~
 
 1.12.0  2018-05-12
-        - Added support for socks 5/4a/4 proxies.
+        - Attempt to support for socks 5/4a/4 proxies.
 
 1.10.0  2018-02-19
-        - Added support for SSL_cert_file, SSL_cert, SSL_key_file and SSL_key.
+        - Support SSL_cert_file, SSL_cert, SSL_key_file and SSL_key.
         - Document supported ssl_opts.
 
 1.8.0   2013-08-05
